--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,8 @@
 
 <ul>
   {{#each burgers}}
-    {{#unless devoured}}
-      {{this.id}} - {{this.burger_name}}
+    {{#unless newBurger}}
+      {{> burgers/burger-block newBurger=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -15,12 +15,12 @@
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-      {{this.id}} - {{this.burger_name}}
+      {{> burgers/burger-block devour=false}}
     {{/if}}
   {{/each}}
 </ul>
 
-<h2>Burger</h2>
+<h2>Add Burger</h2>
 <form class="create-form">
 
   <div class="form-group">
