worked in index.handlebars

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,8 +1,18 @@
-<li>
+{{!-- <li>
 	{{name}}
 
 	<button class="new-burger" data-id="{{id}}" data-newBurger="{{newBurger}}">
 		{{#if newBurger}}Congrats! A new Burger{{else}}Devoured{{/if}}
 	</button>
 
+</li> --}}
+
+<li>
+	{{name}}
+
+	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
+		{{#if sleep}}SLEEP TIME!{{else}}WAKE UP!{{/if}}
+	</button>
+
+	<button class="delete-cat" data-id="{{this.id}}">DELETE!</button>
 </li>
