--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,8 @@
 
 <ul>
   {{#each burgers}}
-    {{#unless newBurger}}
-      {{> burgers/burger-block newBurger=true}}
+    {{#unless sleepy}}
+      {{> burgers/burger-block sleep=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -14,8 +14,8 @@
 
 <ul>
   {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devour=false}}
+    {{#if sleepy}}
+      {{> burgers/burger-block sleep=false}}
     {{/if}}
   {{/each}}
 </ul>
