working in index.handlebars to create html which will help with coding the buttons

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,44 @@
-<h1>Burgers</h1>
+<div class="container">
+  <h1>Add a burger! Then devour it if you get hungry</h1>
+  <br>
+  <br>
+  <h2>Add Burger</h2>
+  <form class="create-form">
 
-<h2>New Burger</h2>
+    <div class="form-group">
+      <label for="ca">Burger Name:</label>
+      <input type="text" id="ca" name="name">
+    </div>
 
-<ul>
-  {{#each burgers}}
-    {{#unless sleepy}}
-      {{> burgers/burger-block sleep=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Devoured Burger</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if sleepy}}
-      {{> burgers/burger-block sleep=false}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
-
-  <div class="form-group">
-    <label for="devoured">Devoured</label><br>
+    <div class="form-group">
+      {{!-- <label for="devoured">Devoured</label><br>
     <input type="radio" name="devoured" value="1" checked> Devoured<br>
-    <input type="radio" name="devoured" value="0"> Devoured
-  </div>
+    <input type="radio" name="devoured" value="0"> Devoured --}}
+    </div>
 
-  <button type="submit">Burger</button>
-</form>
+    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}>Submit Burger</button>
+  </form>
+  <br>
+  <br>
+
+  <ul>
+    {{#each burgers}}
+    {{#unless devoured}}
+    <span><strong>{{this.id}} - {{this.burger_name}}</span></strong>
+    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}>Submit Burger</button>
+
+    {{/unless}}
+    {{/each}}
+  </ul>
+
+  <ul>
+    {{#each burgers}}
+    {{#if devoured}}
+    <span><strong>{{this.id}} - {{this.burger_name}}</span></strong>
+    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}>Submit Burger</button>
+
+    {{/if}}
+    {{/each}}
+  </ul>
+
+</div>
