--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,7 @@
   <br>
   <h2>Add Burger</h2>
   <form class="create-form">
+    
 
     <div class="form-group">
       <label for="ca">Burger Name:</label>
@@ -25,7 +26,7 @@
     {{#each burgers}}
     {{#unless devoured}}
     <span><strong>{{this.id}} - {{this.burger_name}}</span></strong>
-    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}>Submit Burger</button>
+    <button type="button" class="btn" id="button" data-id={{this.id}} data-newDevoured={{devour}}></button>
 
     {{/unless}}
     {{/each}}
@@ -35,8 +36,7 @@
     {{#each burgers}}
     {{#if devoured}}
     <span><strong>{{this.id}} - {{this.burger_name}}</span></strong>
-    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}>Submit Burger</button>
-
+    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}></button>
     {{/if}}
     {{/each}}
   </ul>
