--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,41 +4,46 @@
   <br>
   <h2>Add Burger</h2>
   <form class="create-form">
-    
+
 
     <div class="form-group">
       <label for="ca">Burger Name:</label>
       <input type="text" id="ca" name="name">
     </div>
 
-    <div class="form-group">
-      {{!-- <label for="devoured">Devoured</label><br>
+    {{!-- <div class="form-group"> --}}
+    {{!-- <label for="devoured">Devoured</label><br>
     <input type="radio" name="devoured" value="1" checked> Devoured<br>
     <input type="radio" name="devoured" value="0"> Devoured --}}
-    </div>
+</div>
+</form>
+<br>
+<br>
 
-    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}>Submit Burger</button>
+<ul>
+  <h2>Add Burger</h2>
+  {{#each burgers}}
+  {{#unless devoured}}
+  <form class="burger-form" method="POST">
+    <button type="button" class="btn" id="submit-btn" data-id={{this.id}} data-newDevoured={{devour}}>Submit
+      Burger</button>
   </form>
-  <br>
-  <br>
-
-  <ul>
-    {{#each burgers}}
-    {{#unless devoured}}
-    <span><strong>{{this.id}} - {{this.burger_name}}</span></strong>
-    <button type="button" class="btn" id="button" data-id={{this.id}} data-newDevoured={{devour}}></button>
-
-    {{/unless}}
-    {{/each}}
+  {{burger_name}} <span>#{{id}}</span>
+  {{/unless}}
+  {{/each}}
   </ul>
 
-  <ul>
-    {{#each burgers}}
-    {{#if devoured}}
-    <span><strong>{{this.id}} - {{this.burger_name}}</span></strong>
-    <button type="button" class="btn" data-id={{this.id}} data-newDevoured={{devour}}></button>
-    {{/if}}
-    {{/each}}
-  </ul>
+
+<ul>
+  <h2>Devour this Jawn</h2>
+  {{#each burgers}}
+  {{#unless devoured}}
+  <form class="devour-form" method="PUT">
+    <button type="button" class="btn" id="devour-burger" data-id={{this.id}} data-newDevoured={{devour}}>Button</button>
+  </form>
+  {{burger_name}} <span>#{{id}}</span>
+  {{/unless}}
+  {{/each}}
+</ul>
 
 </div>
