--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -10,7 +10,7 @@
 <li>
 	{{name}}
 
-	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
+	<button class="change-sleep" data-id="{{id}}" data-newDevoured="{{devour}}">
 		{{#if sleep}}SLEEP TIME!{{else}}WAKE UP!{{/if}}
 	</button>
 
